share/web/css/sunriser.css
/* ... */
html,
body{
  width:100%;
  height:100%;
}

body{
  font-size: 18px;
  line-height:1.5em;
  color:#444;
  font-family:'DIN1451', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  transition-duration:0.2s;
  /*background: linear-gradient(270deg, #184c6f, #0f705d);*/
  /*background:url(../img/background.jpg) no-repeat fixed center center / cover #145868;*/
  /* for now deactivated ---------------------------
    -o-animation: BackAnim 175s ease infinite;
    -webkit-animation: BackAnim 175s ease infinite;
    -moz-animation: BackAnim 175s ease infinite;
    animation: BackAnim 175s linear infinite;
  -------------------------------------------------- */  
  background:url("../img/background.jpg") no-repeat fixed center center / 200% 200% #145868;
  transform-origin: 50% 400px 0px;
}
@-o-keyframes BackAnim {
    0%{background-position:0% 50%}
    12.5%{background-position:16% 83%}
    25%{background-position:50% 100%}
    37.5%{background-position:83% 83%}
    50%{background-position:100% 50%}
    62.5%{background-position:83% 16%}
    75%{background-position:50% 0%}
    87.5%{background-position:16% 16%}
    100%{background-position:0% 50%}
}
@-webkit-keyframes BackAnim {
    0%{background-position:0% 50%}
    12.5%{background-position:16% 83%}
    25%{background-position:50% 100%}
    37.5%{background-position:83% 83%}
    50%{background-position:100% 50%}
    62.5%{background-position:83% 16%}
    75%{background-position:50% 0%}
    87.5%{background-position:16% 16%}
    100%{background-position:0% 50%}
}
@-moz-keyframes BackAnim {
    0%{background-position:0% 50%}
    12.5%{background-position:16% 83%}
    25%{background-position:50% 100%}
    37.5%{background-position:83% 83%}
    50%{background-position:100% 50%}
    62.5%{background-position:83% 16%}
    75%{background-position:50% 0%}
    87.5%{background-position:16% 16%}
    100%{background-position:0% 50%}
}
@keyframes BackAnim {
    0%{background-position:0% 50%}
    12.5%{background-position:16% 83%}
    25%{background-position:50% 100%}
    37.5%{background-position:83% 83%}
    50%{background-position:100% 50%}
    62.5%{background-position:83% 16%}
    75%{background-position:50% 0%}
    87.5%{background-position:16% 16%}
    100%{background-position:0% 50%}
}

h1{
  font-size: 2em;
  color:#f632b;
}

img{
  display:block;
}
.img_resp{
  width:100%;
  height:100%;
}
pre{
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
  font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
hr{
  border-width: 1px 0px 0px;
  border-color: #ddd;
  border-style: solid;
}
svg{
  width:100%;
  border:1px solid #CCD7E2;
}

.main{
  height:100%;
  max-width:1200px;
  margin:0 auto;
  padding:0 50px;
}

/***  FORMS  ***/

.error{
  color: #ff0000;
}


/***  CLASSES  ***/
/** Header **/

header{
  height:100px;
  width:auto;
  padding-top:35px;
}
.sunriser{
  font-size:30px;
  color:white;
  float:left;
  white-space: nowrap;
  width: auto;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 32px;
  text-shadow: 0 0 5px rgba(0,0,0,0.5);
}
.sunriser a{
  color:white;
  text-decoration:none;
}
#sunriser_datetime_header{
  font-size:24px;
  color:white;
  float:right;
  padding-top: 2px;
  opacity:0.75;
}
/**Control center**/

.control_center{
  width: 100%;
  height: auto;
  margin-bottom:100px;
  position:relative;
  overflow: hidden;
  min-height:300px;
}
.control_center > .sunriser_content{
  background-color: white;
}

/*Navigation*/

nav{
  width: 70px;
  background-color: #202731;
  height: 100%;
  text-align: center;
  position:absolute;
  z-index:4;
  min-height: 420px;
}
nav a,
nav{
  color: #a6a9ad;
  text-decoration: none;
}
.first-level > a,
.first-level > i{
  height:70px;
  width:70px;
  padding-top: 24px;
  display:block !important
}
nav .first-level:last-child{
  position:absolute;
  bottom:0px;
  width:70px
}
nav .first-level:hover,
nav .selected{
  cursor:pointer;
}
nav .first-level:hover{
  background-color: #1D2029;
  color:#fff;
}
nav .selected:hover,
nav .selected,
nav .selected a{
  color:#fff !important;
  background-color: #68D472;
}
.second-nav{
  margin-left: 70px;
  position: absolute;
  color: #777;
  background: white;
  top:0;
  font-size: 18px;
  text-align: left;
  border-style:solid;
  border-color:#ccc;
  border-width: 0 1px 0 0;
  z-index:3;
  height:100%;
  overflow:hidden;
  display:none;
  width:300px; /* TODO : Also not the best solution. 
                  Have to check if something better exists */
}
.first-level .second-nav li a{
  padding: 14px 50px 0 2em;
  height:50px;
  display: block;
}
.selected .second-level a {
  background-color:#fff;
  color: #777 !important;
}
.second-level .fa {
  color: #a6a9ad !important;
}
.first-level .second-nav a:hover{
  background-color:#f5f5f5
}
.second-level i:after{
  content:"";
  padding-right:1em;
}
nav h2{
  text-transform:uppercase;
  color:#777;
  padding:24px 0 0 24px;
  height:71px;
}
.first-level:hover:not(.toggle) > i{
  color: #fff;
}
.first-level.toggle::before{
  content:"";
  position:absolute;
  width:0px;
  height:0px;
  border-style:solid;
  border-color:transparent #fff transparent transparent;
  border-width:10px;
  margin: 24px 0px 0px 52px;
  left: 0;
}

/*Click/Touch effect*/

.toggle {
  color:white;
  background-color: #1D2029;
}
.toggle .second-nav{
  display:block;
}
.overlay.actif{
  background-color: transparent;
  width: 100%;
  height: 100%;
  top: 0px;
  z-index: 2;
  position:fixed;
  left:0;
  cursor:default
}
/*font awesome fix*/
.fa{
  display: initial !important;
}
.fa-2x{
  font-size:20px !important
}
/*Loader*/
.loader {
    margin: 100px auto 0 auto;
}
/*NoScript*/

.noscript-overlay{
  position: fixed;
  background-color: rgba(0,0,0,0.75);
  height: 100%;
  z-index: 11;
  width: 100%;
}
/* ... */

